tidy text in one_variable_continuous.ipynb

--- a/exercises/one_variable_continuous/one_variable_continuous.ipynb
+++ b/exercises/one_variable_continuous/one_variable_continuous.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "This notebook exercise will describe visualisation of one-dimensional continuous data in `Python`, using the `matplotlib` and `seaborn` libraries.\n",
     "\n",
-    "For these examples, we will work with randomly-sampled data from statistical distributions."
+    "For these examples, we will work with randomly-sampled data from statistical distributions that you will generate using this notebook."
    ]
   },
   {
@@ -41,18 +41,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Run the pylab magic in this cell\n",
-    "%pylab inline"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,10 +55,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Run the pylab magic in this cell\n",
+    "%pylab inline\n",
+    "\n",
     "# Import seaborn\n",
     "import seaborn as sns"
    ]
@@ -79,7 +70,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll turn off warning messages, too"
+    "<div class=\"alert alert-warning\">\n",
+    "<b>We will turn off distracting warning messages</b>\n",
+    "</div>\n",
+    "\n",
+    "```python\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "```"
    ]
   },
   {
@@ -90,6 +88,7 @@
    },
    "outputs": [],
    "source": [
+    "# Turn off warning messages\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -99,7 +98,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\">\n",
-    "<b>NOTE:</b> Even if you do not explicitly plot using <b>seaborn</b> as <b>sns</b>, the <b>matplotlib</b> plot style changes in the notebook.\n",
+    "<b>NOTE:</b> Even if you do not explicitly plot using <b>seaborn</b> as <b>sns</b>, importing it causes style changes from the <b>matplotlib</b> defaults.\n",
     "</div>\n"
    ]
   },
@@ -116,9 +115,11 @@
    "source": [
     "### Learning Outcomes\n",
     "\n",
-    "* Representing one-dimensional continuous-valued data using `matplotlib` and `seaborn` libraries\n",
-    "* Generating random example data\n",
-    "* Use of `figure()` and subplots"
+    "* Generating randomly-distributed example data\n",
+    "* Representing one-dimensional continuous-valued data with histograms, KDE plots, and rug plots\n",
+    "* Using `matplotlib` and `seaborn` libraries\n",
+    "* Presenting arrays of images\n",
+    "* Use of `figure()` and `subplots()`"
    ]
   },
   {
@@ -135,7 +136,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success\">\n",
-    "<h3>1. Creating a random dataset</h3>\n",
+    "<h3>1. Creating a randomly-distributed 1D dataset</h3>\n",
     "</div>"
    ]
   },
@@ -143,11 +144,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creating a random dataset\n",
+    "#### Creating the dataset\n",
     "\n",
-    "The `Numpy` library contains a module called `random` which provides a number of utility functions for generating (pseudo-)random value data. Once `pylab` is running, you can find out more about this module with `help(random)`.\n",
+    "The `Numpy` library contains a module called `random` which provides a number of utility functions for generating (pseudo-)random value data. This is imported when you use the `%pylab inline` magic, and you can find out more about this module with `help(random)`.\n",
     "\n",
-    "We will use the `random.random()` function to generate 100 datapoints in the variable `data`, whose distribution we will explore graphically using `matplotlib`\n",
+    "We will use the `random.random()` function to generate 100 datapoints, which we will assign to the variable `data`. We will explore the distribution of this data graphically using `matplotlib`\n",
     "\n",
     "```python\n",
     "data = random.random(100)\n",
@@ -159,7 +160,7 @@
     "* `random.randn(10)`: standard normal distribution\n",
     "* `random.negative_binomial(1, 0.1, 10)`: negative binomial distribution\n",
     "\n",
-    "and so on. Feel free to try them below"
+    "and so on. You should feel free to experiment with them using the code below"
    ]
   },
   {
@@ -188,9 +189,9 @@
    "source": [
     "#### Base histogram\n",
     "\n",
-    "[Histograms](http://www.datavizcatalogue.com/methods/histogram.html) represent the distribution of data over a continuous interval. The total area of the histogram is considered equal to the number of datapoints, and the area of each bar represents the frequency of datapoints in each interval, or *bin*.\n",
+    "[Histograms](http://www.datavizcatalogue.com/methods/histogram.html) show the distribution of data over a continuous interval. The total area of the histogram is considered to represent the number of datapoints, where the area of any bar is proportional to the frequency of datapoints in that interval, or *bin*.\n",
     "\n",
-    "We can draw a basic histogram of our data with the code below, using the `hist()` function:\n",
+    "You can draw a basic histogram of your dataset using the `hist()` function, as in the code below:\n",
     "\n",
     "```python\n",
     "n, bins, patches = hist(data)\n",
@@ -212,13 +213,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will probably find this basic histogram to be pretty uninspiring. The colour choice is flat, and the whole appearance is quite blocky and uninformative. It lacks a title or any other detail.\n",
+    "You will probably find this basic histogram to be pretty uninspiring. The colour choice is flat, and the whole appearance is quite blocky and uninformative. It also lacks a title or any other detail.\n",
     "\n",
-    "The objects returned by the `hist()` function are:\n",
+    "The objects returned by the `hist()` function in the code above are:\n",
     "\n",
-    "* `n`: an array of values for each bar in the histogram, reflecting its height on the *y*-axis\n",
-    "* `bins`: an array of the minimum values for each bin (breakpoints)\n",
-    "* `patches`: objects representing the graphical elements for each bar\n",
+    "* `n`: an *array* of values for each bar in the histogram, reflecting its height on the *y*-axis\n",
+    "* `bins`: an *array* of the breakpoints for each bin (where the edges of each bin lie on the *x*-axis)\n",
+    "* `patches`: objects representing the graphical elements for each bar; these can be manipulated to modify the plot's appearance\n",
     "\n",
     "You can explore the contents of these variables in the cell below"
    ]
@@ -240,9 +241,9 @@
    "source": [
     "#### Normalised histograms\n",
     "\n",
-    "The base histogram above reports absolute counts of the data in each bin. A normalised histogram reports *frequencies*, essentially modifying bin heights so that the integral of the histogram (total area) is equal to unity (1). This makes the histogram a, perhaps blocky, probability density curve.\n",
+    "The base histogram above reports absolute counts of the data in each bin. A normalised histogram reports *frequencies*, essentially modifying bin heights so that the integral of the histogram (summed area of all the bars) is equal to unity (1). This makes the histogram equivalent to a (stepped) probability density curve.\n",
     "\n",
-    "To generate a normalised histogram, we just need to set `normed=1` in the call to `hist()`:\n",
+    "To generate a normalised histogram, you can set `normed=1` in the call to `hist()`:\n",
     "\n",
     "```python\n",
     "n, bins, patches = hist(data, normed=1)\n",
@@ -267,7 +268,7 @@
     "You will notice that the values on the *y*-axis have changed. \n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
-    "If you are using, for instance, a uniform random distribution, you will also notice that, perhaps counter-intuitively, some of the bars may extend past the value 1.0 on the <i>y</i>-axis; this is because the area of each bar is the width of the bin multiplied by its height, and the bin widths in this example are all around 0.1.\n",
+    "<b>NOTE:</b> For some distributions you may notice that, perhaps counter-intuitively, some of the bars may extend past the value 1.0 on the <i>y</i>-axis. This can occur when the width of the bar is less than 1, as the area of each bar is the width of the bin multiplied by its height.\n",
     "</div>"
    ]
   },
@@ -281,7 +282,7 @@
     "\n",
     "* `bins`: the number of bins into which the data will be divided\n",
     "* `facecolor`: the colour of each rectangle in the histogram\n",
-    "* `alpha`: the transparency value for the histogram (useful when layering plots)\n",
+    "* `alpha`: the transparency value for the rectangles histogram (useful when layering plots)\n",
     "\n",
     "We'll try this with the code below:\n",
     "\n",
@@ -307,7 +308,7 @@
    "source": [
     "#### Stepfilling\n",
     "\n",
-    "So far, our histograms have surrounded each of the bars with a border line. There is a different representation: `histtype=stepfilled`, which makes the plot look more like a density plot:\n",
+    "So far, our histograms have surrounded each of the bars with a border line. There is a different representation: `histtype=stepfilled`, which makes the plot look more like a density plot, which is appropriate when using a normalised histogram:\n",
     "\n",
     "```python\n",
     "n, bins, patches = hist(data, normed=1, bins=20, facecolor='green',\n",
@@ -339,13 +340,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can place histograms, or any other plot, into *subplots*. These render several sets of axes on the same figure, to enable several visualisations to be placed alongside each other.\n",
+    "We often wish to place multiple sets of axes on the same overall figure, to enable several related visualisations to be placed alongside each other. To do this, we place histograms - or any other plot - into *subplots*. \n",
     "\n",
-    "The general approach is as follows:\n",
+    "The general approach for `matplotlib` is as follows:\n",
     "\n",
     "1. Create a `Figure()` object\n",
     "2. Add as many subplots (`Axes()`) to the `Figure()` as you require, specifying their location in a grid structure.\n",
     "3. Add your visualisations to the subplot (`Axes()`) objects\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "<b>NOTE:</b> An alternative approach to producing ordered arrangements of plots called <i>faceting</i> is available in other graphics libraries, and can be much simpler to use than this method. <i>Faceting</i> is dealt with in some of the other exercises in this set.\n",
+    "</div>\n",
     "\n",
     "In the example below, we will create a 1x3 grid, and revisualise the three histograms from the examples above, with the code below:\n",
     "\n",
@@ -381,12 +386,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first run of this code is likely to be disappointing, as the aspect ratio will likely make the output image appear cramped and untidy. This is because the default figure size has not been changed.\n",
+    "The first run of this code will probably be a bit disappointing, as the default aspect ratio will likely make the output image appear cramped and untidy. We can change the overall aspect ratio (and make the figure clearer) by setting a larger overall figure size.\n",
     "\n",
-    "The overall output size of the figure can be set with `figsize=(width, height)`, where `width` and `height` are the output image value in inches. We can set a more favourable aspect ratio with the following code:\n",
+    "The overall output size of the figure can be set with `figsize=(width, height)`, where `width` and `height` are the output image value in inches. We can set this with the following code:\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(8, 3))\n",
+    "fig = figure(figsize=(10, 3))\n",
     "```"
    ]
   },
@@ -398,18 +403,18 @@
    },
    "outputs": [],
    "source": [
-    "# Replot the subplots in this cell, with a better aspect ratio\n"
+    "# Replot the subplots in this cell, with a larger figure size\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Labels and titles can be added to each individual axis in the figure.\n",
+    "Modifications, such as addition of labels and titles, can be made to each individual axis in the figure, by calling methods for that plot axis specifically.\n",
     "\n",
-    "Here, the first histogram has a *y*-axis of absolute count, but the other two plots have a *y*-axis of normalised frequency. All axes have `data` values along the *x*-axis.\n",
+    "Here, the first histogram (`ax1`) has a *y*-axis of absolute count, but the other two plots (`ax2`, `ax3`) have a *y*-axis of normalised frequency. All axes have `data` values along the *x*-axis.\n",
     "\n",
-    "We can treat axes like any other variable, and loop over them, as in the code below:\n",
+    "These axis objects are like any other Python object and we can treat them like any other object, so loop over them as in the code below:\n",
     "\n",
     "```python\n",
     "# Set first axis y-label\n",
@@ -429,7 +434,7 @@
     "ax3.set_title('modified')\n",
     "```\n",
     "\n",
-    "These changes will modify the figure *in memory*, but won't change any already-rendered images. To do this, we'll have to show the contents of `fig` in an output cell again. First though, we will apply the `tight_layout()` method so that the labels do not overlap the graphs:\n",
+    "These changes will modify the figure *in memory*, but won't change any already-rendered images. To see the changes, you have to show the contents of `fig` in an output cell again. First though, apply the `tight_layout()` method so that the labels do not overlap the graphs:\n",
     "\n",
     "```python\n",
     "fig.tight_layout()\n",
@@ -489,9 +494,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get quite a bit of control over the choice of kernel and bandwidth reference method for determination of kernel size. For more information see `help(sns.kdeplot)` or the documentation.\n",
+    "`sns.kdeplot` offers quite a bit of control over the choice of kernel and bandwidth reference method for determination of kernel size. For more information see `help(sns.kdeplot)` or the documentation.\n",
     "\n",
-    "* `sns.kdeplot()`: [documentation](https://stanford.edu/~mwaskom/software/seaborn/generated/seaborn.kdeplot.html)"
+    "* `sns.kdeplot()`: [documentation](https://stanford.edu/~mwaskom/software/seaborn/generated/seaborn.kdeplot.html)\n",
+    "\n",
+    "There are several options for kernel choice, e.g.:\n",
+    "\n",
+    "```python\n",
+    "sns.kdeplot(data, kernel='cos')\n",
+    "sns.kdeplot(data, kernel='epa')\n",
+    "```\n",
+    "\n",
+    "and bandwidth can be varied, too:\n",
+    "\n",
+    "```python\n",
+    "sns.kdeplot(data, kernel='epa', bw=2)\n",
+    "sns.kdeplot(data, kernel='epa', bw='silverman')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Experiment with bandwidth and kernel choice for sns.kdeplot()\n"
    ]
   },
   {
@@ -509,7 +539,7 @@
     "*Rug plots* draw small vertical ticks at each observation point, giving an alternative representation of data density.\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
-    "<b>NOTE:</b> if only the histogram is drawn, the <i>y</i>-axis reverts to count data. Including the KDE sets the <i>y</i> axis to frequency, and essentially normalises the histogram.\n",
+    "<b>NOTE:</b> if only the histogram is drawn, the <i>y</i>-axis reverts to count data. Including the KDE sets the <i>y</i> axis to frequency, and essentially forces normalisation of the histogram.\n",
     "</div>\n"
    ]
   },
@@ -530,7 +560,7 @@
    "source": [
     "#### Subplots with `seaborn`\n",
     "\n",
-    "Although `seaborn` graphs cannot be added to figure subplots on creation in *exactly* the same way as `matplotlib` graphs, they can still be added by specifying the `ax` argument, as follows:\n",
+    "Although `seaborn` graphs cannot be added to figure subplots on creation in *exactly* the same way as `matplotlib` graphs, some (including `sns.distplot`) can still be added by specifying the `ax` argument, as follows:\n",
     "\n",
     "```python\n",
     "sns.distplot(data, rug=True, ax=ax3, bins=20)\n",
@@ -598,7 +628,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
