--- a/index.ipynb
+++ b/index.ipynb
@@ -41,9 +41,11 @@
     "\n",
     "### Learning Outcomes\n",
     "\n",
-    "* Representing one-dimensional continuous-valued data using `matplotlib` and `seaborn` libraries\n",
-    "* Generating random example data\n",
-    "* Use of `figure()` and subplots\n",
+    "* Generating randomly-distributed example data\n",
+    "* Representing one-dimensional continuous-valued data with histograms, KDE plots, and rug plots\n",
+    "* Using `matplotlib` and `seaborn` libraries\n",
+    "* Presenting arrays of images\n",
+    "* Use of `figure()` and `subplots()`\n",
     "\n",
     "[![1D contiuous data example](exercises/one_variable_continuous/images/intro_image.png)]((exercises/one_variable_continuous/one_variable_continuous.ipynb)"
    ]
