tidy text in continuous x,y exercise

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
     "* Representing two-dimensional continuous *x* and *y* data using `matplotlib` and `seaborn` libraries\n",
     "* Use of `figure()` and subplots\n",
     "* Annotating plots with text\n",
-    "* Working with long and wide form DataFrame\n",
+    "* Working with long and wide form `DataFrame`s in `pandas`\n",
     "* Using statistical overlays and `seaborn`'s statistical plots\n",
     "\n",
     "![continuous x, y data example](exercises/two_variables/images/intro_image_continuous_xy.png)"
