add cartoon slides and exercise choices

--- a/presentation/2016-07-28_RDVW_Pritchard.tex
+++ b/presentation/2016-07-28_RDVW_Pritchard.tex
@@ -68,14 +68,25 @@
 \input{sections/interactive_plots}
 
 %%%
+% SECTION: BRIDGE TO PRACTICAL
+\section{Hands-on session}
+\subsection{Python libraries}
+%\input{sections/python_libraries}
+\subsection{Exercises}
+\input{sections/exercise_choices}
+\subsection{Let's get started}
+\input{sections/start_install}
+
+
+%%%
 % SECTION: CONCLUSIONS
-\section{Conclusions}
-\subsection{General advice}
-\input{sections/general_advice}
+%\section{Conclusions}
+%\subsection{General advice}
+%\input{sections/general_advice}
 
 %%%
 % SECTION: Acknowledgements
-\section{Acknowledgements}
+%\section{Acknowledgements}
 %\input{sections/acknowledgements}
 
 %%%
