--- a/presentation/sections/about_me.tex
+++ b/presentation/sections/about_me.tex
@@ -30,6 +30,15 @@
       \end{itemize}  
 \end{frame}
 
+% BIG DATA
+\begin{frame}
+  \frametitle{Big data$\ldots$
+  }
+  \begin{center}
+    \includegraphics[height=0.7\textheight,valign=t]{images/big_data}    
+  \end{center}
+\end{frame}
+
 % GENOMEDIAGRAM
 \begin{frame}
   \frametitle{GenomeDiagram 
