--- a/presentation/sections/bar_charts.tex
+++ b/presentation/sections/bar_charts.tex
@@ -134,3 +134,33 @@
   \textcolor{hutton_purple}{Univariate scatterplots show sample sizes, outliers, variance}
     \includegraphics[width=1\textwidth]{images/weissgerber_bar_scatter3}    
 \end{frame}
+
+% ANY CHART CAN MISLEAD 1
+\begin{frame}
+  \frametitle{Any chart can mislead
+  }
+  \begin{center}
+    \includegraphics[height=0.7\textheight,valign=t]{images/misleading_graphs_2016}    
+  \end{center}
+\end{frame}
+
+% ANY CHART CAN MISLEAD 2
+\begin{frame}
+  \frametitle{Any chart can mislead
+    \footnote{\tiny{\href{http://tylervigen.com/view_correlation?id=9233}{Spurious Correlations, tylervigen.com}}}  
+  }
+  \begin{center}
+    \includegraphics[height=0.7\textheight,valign=t]{images/correlation_nic_cage_helicopter}    
+  \end{center}
+\end{frame}
+
+% ANY CHARTS CAN MISLEAD 3
+\begin{frame}
+  \frametitle{Any chart can mislead
+    \footnote{\tiny{\href{https://xkcd.com/1138/}{https://xkcd.com/1138/}}}
+  }
+  \begin{center}
+    \includegraphics[height=0.6\textheight,valign=t]{images/heatmap}    
+    \includegraphics[height=0.6\textheight,valign=t]{images/truncated_y}        
+  \end{center}
+\end{frame}
