--- a/presentation/sections/what_is_datavis.tex
+++ b/presentation/sections/what_is_datavis.tex
@@ -67,3 +67,14 @@
         \end{itemize}
       \end{itemize}  
 \end{frame}
+
+
+% Frame template 
+\begin{frame}
+  \frametitle{A model of communication
+    \footnote{\tiny{\href{https://www.amazon.co.uk/Dont-Be-Such-Scientist-Substance}{Randy Olson (2009) \textit{Don't Be Such a Scientist}}}}
+  }
+  \begin{center}
+    \includegraphics[height=0.8\textheight]{images/mass_communication_datavis}        
+  \end{center}
+\end{frame}
