added slides for Python libraries

--- a/presentation/2016-07-28_RDVW_Pritchard.tex
+++ b/presentation/2016-07-28_RDVW_Pritchard.tex
@@ -71,7 +71,7 @@
 % SECTION: BRIDGE TO PRACTICAL
 \section{Hands-on session}
 \subsection{Python libraries}
-%\input{sections/python_libraries}
+\input{sections/python_libraries}
 \subsection{Exercises}
 \input{sections/exercise_choices}
 \subsection{Let's get started}
