replace pylab with matplotlib inline

--- a/exercises/grammar_of_graphics/grammar_of_graphics.ipynb
+++ b/exercises/grammar_of_graphics/grammar_of_graphics.ipynb
@@ -117,7 +117,7 @@
     "`ggplot` is intended to work well with the `DataFrame` representations of the `Pandas` module - a little like a reimplementation of `R`'s data philosophy in Python, so we also import this module. \n",
     "\n",
     "```python\n",
-    "%pylab inline\n",
+    "%matplotlib inline\n",
     "\n",
     "from ggplot import *\n",
     "\n",
@@ -128,13 +128,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import ggplot and pandas modules\n",
-    "%pylab inline\n",
+    "%matplotlib inline\n",
     "\n",
     "from ggplot import *\n",
     "\n",
@@ -162,9 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import gapminder data into the variable gapminder\n"
@@ -192,9 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Peek at the gapminder data\n"
@@ -218,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use qplot to produce a basic scatterplot of gapminder data\n"
@@ -373,9 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the plot base layer\n"
@@ -403,9 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use a geom_point() to produce a scatterplot\n"
@@ -427,9 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add the geom_point() to the base plot in p, and render the whole scatterplot\n"
@@ -458,9 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add axis labels and a title to the plot\n"
@@ -476,9 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Answer challenge in this cell\n"
@@ -519,9 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Render a line plot with geom_line()\n"
@@ -544,9 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Group datapoints by country, and render a line plot\n"
@@ -567,9 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Stack a geom_point() on a geom_line() for the gapminder data\n"
@@ -590,9 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Redraw the stacked plot, with black datapoints\n"
@@ -624,9 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot GDP against life expectancy\n"
@@ -649,9 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Replot the data with a log y-axis\n"
@@ -682,9 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Replot the log-transformed data with a Brewer colour scale\n"
@@ -720,9 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot smoothed curves by continent for life expectancy over time\n"
@@ -745,9 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot smoothed curves by continent for life expectancy over time\n"
@@ -783,9 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Group datapoints by country, and render a line plot\n"
@@ -808,9 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Group datapoints by country, and render a line plot\n"
@@ -840,9 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a facet plot by year of gdpPercap vs lifeExp, coloured by continent\n"
@@ -866,9 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a facet plot by year and continent, of gdpPercap vs lifeExp since 1980, coloured by continent\n"
@@ -900,9 +856,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
