--- a/exercises/one_variable_continuous/one_variable_continuous.ipynb
+++ b/exercises/one_variable_continuous/one_variable_continuous.ipynb
@@ -31,10 +31,10 @@
    "source": [
     "#### Python imports\n",
     "\n",
-    "To set up `pylab`, we run a cell containing the line:\n",
+    "To view images in the notebook, we run a cell containing the line:\n",
     "\n",
     "```python\n",
-    "%pylab inline\n",
+    "%matplotlib inline\n",
     "```\n",
     "\n",
     "This will make `matplotlib` and `NumPy` libraries available to us in the notebook."
@@ -54,13 +54,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run the pylab magic in this cell\n",
-    "%pylab inline\n",
+    "%matplotlib inline\n",
     "\n",
     "# Import seaborn\n",
     "import seaborn as sns"
@@ -166,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the variable data, containing 100 random values, here\n"
@@ -201,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Draw basic histogram in this cell\n"
@@ -227,9 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Explore the contents of n, bins, and patches in this cell\n"
@@ -253,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a normalised histogram in this cell\n"
@@ -294,9 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Modify the histogram appearance in this cell\n"
@@ -319,9 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a stepfilled histogram\n"
@@ -374,7 +360,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -398,9 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Replot the subplots in this cell, with a larger figure size\n"
@@ -447,9 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add axis labels in this cell, and rerender the image\n"
@@ -482,9 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Draw a seaborn kdeplot()\n"
@@ -516,9 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Experiment with bandwidth and kernel choice for sns.kdeplot()\n"
@@ -546,9 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use sns.distplot() to render the data with a rug plot\n"
@@ -603,9 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Render three types of distribution plot with seaborn\n"
@@ -628,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   },
   "widgets": {
    "state": {},
@@ -636,5 +609,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
