--- a/exercises/two_variables/continuous_x_continuous_y.ipynb
+++ b/exercises/two_variables/continuous_x_continuous_y.ipynb
@@ -37,10 +37,10 @@
    "source": [
     "#### Python imports\n",
     "\n",
-    "To set up `pylab`, we run the *magic*:\n",
+    "To set up inline images, we run the *magic*:\n",
     "\n",
     "```python\n",
-    "%pylab inline\n",
+    "%matplotlib inline\n",
     "```\n",
     "\n",
     "and we import `seaborn` and `pandas` into the namespaces `sns` and `pd`:\n",
@@ -69,13 +69,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use the pylab magic and import seaborn\n",
-    "%pylab inline\n",
+    "%matplotlib inline\n",
     "\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
@@ -154,9 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Inspect the data set using this cell\n"
@@ -207,9 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create axes in this cell, with tight_layout()\n"
@@ -237,9 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set axes xlabels in this cell\n"
@@ -271,9 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set y-axis labels in this cell\n"
@@ -289,9 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Complete the challenge in this cell\n"
@@ -331,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the data in each scatterplot\n"
@@ -418,9 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Melt the data into long form and inspect the output in this cell\n"
@@ -461,9 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the faceted lmplot in this cell\n"
@@ -513,9 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Normalise data in this cell\n"
@@ -541,9 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Fit a linear regression to the normalised data\n"
@@ -576,9 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the figure in this cell:\n",
@@ -604,9 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Identify outliers with more than 20 incidents in 1985-99\n"
@@ -637,9 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Annotate the outliers and render the figure\n"
@@ -672,9 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add text describing the regression, in this cell\n"
@@ -713,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   },
   "widgets": {
    "state": {},
@@ -721,5 +691,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
