update mybinder links in README, index.ipynb

--- a/index.ipynb
+++ b/index.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "These workshop materials are designed to be compatible with [MyBinder](mybinder.org). To start an instance of this repository in your browser, click on the badge below:\n",
     "\n",
-    "[![Binder](http://mybinder.org/badge.svg)](http://mybinder.org/repo/widdowquinn/Teaching-Data-Visualisation)"
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/widdowquinn/Teaching-Data-Visualisation/master?filepath=index.ipynb)"
    ]
   },
   {
@@ -174,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   },
   "widgets": {
    "state": {},
