--- a/exercises/one_variable_continuous/one_variable_continuous.ipynb
+++ b/exercises/one_variable_continuous/one_variable_continuous.ipynb
@@ -54,14 +54,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Run the pylab magic in this cell\n",
     "%matplotlib inline\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# Import seaborn\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "# Random number generation\n",
+    "import random"
    ]
   },
   {
@@ -149,7 +156,7 @@
     "We will use the `random.random()` function to generate 100 datapoints, which we will assign to the variable `data`. We will explore the distribution of this data graphically using `matplotlib`\n",
     "\n",
     "```python\n",
-    "data = random.random(100)\n",
+    "data = [random.random() for _ in range(100)]\n",
     "```\n",
     "\n",
     "Other random samplings are available, such as:\n",
@@ -190,7 +197,7 @@
     "You can draw a basic histogram of your dataset using the `hist()` function, as in the code below:\n",
     "\n",
     "```python\n",
-    "n, bins, patches = hist(data)\n",
+    "n, bins, patches = plt.hist(data)\n",
     "```"
    ]
   },
@@ -221,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Explore the contents of n, bins, and patches in this cell\n"
@@ -238,7 +247,7 @@
     "To generate a normalised histogram, you can set `normed=1` in the call to `hist()`:\n",
     "\n",
     "```python\n",
-    "n, bins, patches = hist(data, normed=1)\n",
+    "n, bins, patches = plt.hist(data, normed=1)\n",
     "```"
    ]
   },
@@ -277,7 +286,7 @@
     "We'll try this with the code below:\n",
     "\n",
     "```python\n",
-    "n, bins, patches = hist(data, normed=1, bins=20, facecolor='green', alpha=0.6)\n",
+    "n, bins, patches = plt.hist(data, normed=1, bins=20, facecolor='green', alpha=0.6)\n",
     "```"
    ]
   },
@@ -296,11 +305,11 @@
    "source": [
     "#### Stepfilling\n",
     "\n",
-    "So far, our histograms have surrounded each of the bars with a border line. There is a different representation: `histtype=stepfilled`, which makes the plot look more like a density plot, which is appropriate when using a normalised histogram:\n",
+    "So far, our histograms have filled each of the bars with a border line, which makes the plot look more like a density plot. Other representations are available, such as: `histtype='step'`, that renders the bar chart as a boundary line:\n",
     "\n",
     "```python\n",
-    "n, bins, patches = hist(data, normed=1, bins=20, facecolor='green',\n",
-    "                        alpha=0.6, histtype='stepfilled')\n",
+    "n, bins, patches = plt.hist(data, normed=1, bins=20, facecolor='green',\n",
+    "                            alpha=0.6, histtype='step')\n",
     "```"
    ]
   },
@@ -310,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a stepfilled histogram\n"
+    "# Create a step style histogram\n"
    ]
   },
   {
@@ -342,7 +351,7 @@
     "\n",
     "```python\n",
     "# Create figure\n",
-    "fig = figure()\n",
+    "fig = plt.figure()\n",
     "\n",
     "# Create subplot axes\n",
     "ax1 = fig.add_subplot(1, 3, 1)  # 1x3 grid, position 1\n",
@@ -376,14 +385,16 @@
     "The overall output size of the figure can be set with `figsize=(width, height)`, where `width` and `height` are the output image value in inches. We can set this with the following code:\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(10, 3))\n",
+    "fig = plt.figure(figsize=(10, 3))\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Replot the subplots in this cell, with a larger figure size\n"
@@ -430,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add axis labels in this cell, and rerender the image\n"
@@ -495,7 +508,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Experiment with bandwidth and kernel choice for sns.kdeplot()\n"
@@ -545,7 +560,7 @@
     "\n",
     "```python\n",
     "# Create figure\n",
-    "fig = figure(figsize=(16, 6))\n",
+    "fig = plt.figure(figsize=(16, 6))\n",
     "\n",
     "# Create subplot axes\n",
     "ax1 = fig.add_subplot(1, 3, 1)  # 1x3 grid, position 1\n",
@@ -583,6 +598,15 @@
    "source": [
     "# Render three types of distribution plot with seaborn\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -601,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   },
   "widgets": {
    "state": {},
