update and fix two variables notebooks

--- a/exercises/two_variables/continuous_x_continuous_y.ipynb
+++ b/exercises/two_variables/continuous_x_continuous_y.ipynb
@@ -69,11 +69,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use the pylab magic and import seaborn\n",
     "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
@@ -152,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Inspect the data set using this cell\n"
@@ -194,7 +200,7 @@
     "There are several ways to create a subplot layout in `matplotlib`, and you may have seen some of these in the exercise `one_variable_continuous.ipynb`. Here, we will use the `subplots()` function. This returns a `figure()` object, and collections of subplots, nested by row. To get two rows of three subplots, retaining each of the six subplot object in a variable we can then manipulate (as `ax1`..`ax6`) you can use the following code:\n",
     "\n",
     "```python\n",
-    "fig, ((ax1, ax2, ax3), (ax4, ax5, ax6)) = subplots(nrows=2, ncols=3, figsize=(12, 8))\n",
+    "fig, ((ax1, ax2, ax3), (ax4, ax5, ax6)) = plt.subplots(nrows=2, ncols=3, figsize=(12, 8))\n",
     "```\n",
     "\n",
     "Here, `figsize` takes a tuple of `(width, height)` for the figure, in inches."
@@ -231,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Set axes xlabels in this cell\n"
@@ -279,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Complete the challenge in this cell\n"
@@ -318,8 +328,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the data in each scatterplot\n"
@@ -404,7 +416,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Melt the data into long form and inspect the output in this cell\n"
@@ -495,7 +509,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Normalise data in this cell\n"
@@ -554,7 +570,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the figure in this cell:\n",
@@ -580,7 +598,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Identify outliers with more than 20 incidents in 1985-99\n"
@@ -611,7 +631,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Annotate the outliers and render the figure\n"
@@ -644,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add text describing the regression, in this cell\n"
@@ -683,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   },
   "widgets": {
    "state": {},
